node/kubia-gpu.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
  - image: asia.gcr.io/trusty-acronym-259304/kubia
    name: kubia
